welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: identifier expected but '(' found.
	 {T.(i) = getCouleurSol()
            ^