welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var x = getMondeHauteur()
var T = new Array[Color](x)
	for (i <- 1 to x)
	 {T.(i) = getCouleurSol()
	 avance()}
	 avance(); gauche();avance();droite()
	 for (i <- 1 to x)
	  { avance()
	  setCouleurBrosse(T(i));baisseBrosse(); leveBrosse()}
}



